fix matrix collapse and scrolling

--- a/source/styles/components/_matrix.less
+++ b/source/styles/components/_matrix.less
@@ -1,9 +1,5 @@
 .app-panel {
-    // position: absolute;
-    position: static;
-    left: 0;
     width: 100%;
-    top: 0;
     height: 100%;
     padding-right: @resizer-width;
 }
@@ -38,12 +34,8 @@
 .matrix {
     padding: 0;
     .app-panel {
-        position: static;
-        left: 0;
         width: 100%;
-        top: 0;
         height: auto;
-        bottom: 46px;
         padding: 0;
     }
     .app-rating-star-wrapper {
@@ -674,10 +666,7 @@ a {
 
 .matrix-body-wrapper {
     position: static;
-    top: @matrix-header;
     width: 100%;
-    z-index: 1;
-    bottom: 0;
     padding-left: @matrix-aside-width;
 }
 
